<resources>
    <string name="app_name">TestTaskForBipRu</string>
    <string name="data_saving_error_message">Data saving error. Try again</string>
    <string name="skipping_input_dialog_title">Incorrect data input</string>
    <string name="skipping_driving_licence_input_dialog_message">Are you sure that you want to skip driver licence input?</string>
    <string name="skipping_driving_licence_input_dialog_positive_btn">Skip driver licence input</string>
    <string name="skipping_driving_licence_input_dialog_negative_btn">Return and change driver licence</string>
    <string name="incorrect_format_of_input_message">Incorrect data format</string>
    <string name="input_contains_incorrect_symbols_message">Incorrect symbol</string>
    <string name="available_for_driving_licence_input_russian_chars">АБВЕКМНОРСТУХЧ</string>
    <string name="available_for_input_english_chars">ABEKMHOPCTYX</string>
    <string name="driving_licence_number_is_incorrect">Driver licence is incorrect</string>
    <string name="final_activity_identifier_value">Identifier: %1$s</string>
    <string name="final_activity_certificate_value">Certificate: %1$s</string>
    <string name="final_activity_driving_licence_value">Driver licence: %1$s</string>
    <string name="available_for_certificate_input_russian_chars">АБВЕЗКМНОРСТУХ</string>
    <string name="certificate_number_is_correct">Certificate is correct</string>
    <string name="certificate_number_is_incorrect">Certificate is incorrect</string>
    <string name="skipping_certificate_input_dialog_message">Are you sure that you want to skip certificate input? If you skip it, then you will lose and entered identifier too</string>
    <string name="skipping_certificate_input_dialog_positive_btn">Skip certificate input and lose identifier</string>
    <string name="skipping_certificate_input_dialog_neagtive_btn">Return and change certificate</string>
    <string name="available_for_identifier_input_russian_chars">АВЕКМНОРСТУХ</string>
    <string name="identifier_number_is_correct">Identifier is correct</string>
    <string name="identifier_number_is_incorrect">Identifier is incorrect</string>
    <string name="skipping_identifier_input_dialog_message">Are you sure, that you want to skip identifier input? If you skip it, then you will automatically skip certificate input too</string>
    <string name="skipping_identifier_input_dialog_positive_btn">Skip identifier and certificate input</string>
    <string name="driving_licence_input_instructions">Identifier input format:\n 1) Enter data in one line\n 2) You can use (or not) spaces as you want\n 3) You can enter data in Eng or Ru languages\n\nExamples:\n 1) \'12 ЧУ 345678\'\n 2) \'12 34 567890\'</string>
    <string name="driving_licence_edit_text_hint">Enter driver licence</string>
    <string name="next_screen_btn_text">Go to next screen</string>
    <string name="final_activity_header_tv">Result:</string>
    <string name="final_activity_identifier_tv_default">Identifier: skipped</string>
    <string name="final_activity_certificate_tv_default">Certificate: skipped</string>
    <string name="final_driving_licence_tv_default">Driver licence: skipped</string>
    <string name="certificate_input_instructions">Certificate input format:\n 1) Enter data in one line\n 2) You can use (or not) spaces as you want\n 3) You can enter data in Eng or Ru languages\n\nExamples:\n 1) \'12 ЗА 345678\' \n 2) \'12 34 567890\'</string>
    <string name="certificate_edit_text_hint">Enter certificate</string>
    <string name="identifier_input_instructions">Identifier input format:\n 1) For \'regular\' identifiers - enter data in one line\n 2) For \'square\' ones - enter data in two lines\n 3) You can use (or not) spaces as you want\n 4) You can enter data in Eng or Ru languages\n\nExamples: \n Identifier type 1 - \'Y 123 AA 97\' \n Identifier type 3 - \'1234(new line)АА 97\'</string>
    <string name="identifier_edit_text_hint">Enter identifier</string>
    <string name="driving_licence_number_is_correct">Driver licence is correct</string>
    <string name="skipping_identifier_input_dialog_negative_btn">Return and change identifier</string>
</resources>