<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentationLayer.finalResultActivity.FinalResultActivity">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/final_activity_header_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/identifierResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/final_activity_identifier_tv_default"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topTextView" />
    <TextView
        android:id="@+id/certificateResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/final_activity_certificate_tv_default"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/identifierResultTextView" />
    <TextView
        android:id="@+id/drivingLicenceResultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/final_driving_licence_tv_default"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certificateResultTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>