<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentationLayer.regIdentifierActivity.VehicleRegIdentifierActivity">

    <EditText
        android:id="@+id/vehicleRegIdentifierET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="2"
        android:text=""
        android:hint="@string/identifier_edit_text_hint"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/goToNextScreenBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Перейти на следующий экран"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/vehicleRegIdentifierCorrectnessTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/identifier_number_is_incorrect"
        android:freezesText="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleRegIdentifierET" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/identifier_input_instructions"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>